# motiv

./: check_live_urdf.py  check_versions.sh  check_xacro.py  check_xacro2.py  check_xacro3.py  fix_add_spawners.py  fix_all_files.py  fix_comprehensive.py  fix_delays.py  fix_gui.py  fix_headless.py  fix_launch.py  fix_launch_syntax.py  fix_lid_both_interfaces.py  fix_lid_dynamics.py  fix_lid_gain.py  fix_lid_native.py  fix_lid_velocity.py  fix_package_xml.py  fix_spawners.py  fix_tilt_and_world.py  fix_velocity_limits.py  fix_wheels_and_world.py  fix_yaml_clean.py  gen_test.py  obstacle_navigator.py  test_axis.py  test_mecanum.py
install/: local_setup.sh  setup.sh
install/mobile_robot_sim/lib/mobile_robot_sim/: lid_control_node.py  mecanum_drive_node.py  start_stop_node.py  test_cmd_vel.py  test_lid.py
install/mobile_robot_sim/share/mobile_robot_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  package.sh  (+6 more)
log/: latest_build
src/mobile_robot_sim/: CMakeLists.txt
src/mobile_robot_sim/config/: controllers.yaml  ekf_config.yaml
src/mobile_robot_sim/launch/: display.launch  gazebo.launch  robot_gazebo.launch.py
src/mobile_robot_sim/meshes/: FL_Wheel.STL  FR_Wheel.STL  Lid.STL  RL_Wheel.STL  RR_Wheel.STL
src/mobile_robot_sim/scripts/: goal_sender_node.py  lid_control_node.py  mecanum_drive_node.py  obstacle_avoidance.py  start_stop_node.py  test_cmd_vel.py  test_movements.py  test_obstacle.py
src/mobile_robot_sim/test_python/: hello_test.py
src/mobile_robot_sim/urdf/: DeliveryRobot_2.csv  DeliveryRobot_2.urdf
src/mobile_robot_sim/world/: my_world.sdf
(+30 files in other folders)
